<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeleccionandoImagenes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRosa"
            style="@style/Buttons1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btnGirasol"
            style="@style/Buttons1"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btnMargarita"
            style="@style/Buttons1"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btnGladiolo"
            style="@style/Buttons1"
            android:text="@string/btn_3" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/LayoutFlor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    </RelativeLayout>
</LinearLayout>