<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NumerosPrimos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="40dp"
            android:text="@string/introduzcaNum"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editNumPrimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="79dp"
            android:layout_marginRight="79dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HintintroduzcaNum"
            android:inputType="number"
            android:numeric="integer"
            android:paddingLeft="25dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/btnCalcularNumPrimo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="77dp"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/textViewSolucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp" />
</LinearLayout>